Bug 47427 - EDITING: Wrong caption count when category name contains white space
Summary: EDITING: Wrong caption count when category name contains white space
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-17 00:10 UTC by Minh Le
Modified: 2015-04-26 00:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot describing the bug (80.85 KB, image/png)
2012-03-17 00:10 UTC, Minh Le
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Minh Le 2012-03-17 00:10:51 UTC
Created attachment 58584 [details]
Screenshot describing the bug

Problem description: When use category name that contains white space, eg. "Ví dụ" (Vietnamese, means "example"), the caption number is always 0.

Steps to reproduce:
1. Create a frame
2. Create a caption for it, enter "Vi du" into category box
3. Hit OK

Current behavior: The caption is always numbered zero.

Expected behavior: The caption should be numbered incrementally from one.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:11.0) Gecko/20100101 Firefox/11.0
Comment 1 Caolán McNamara 2012-12-10 15:29:15 UTC
I couldn't reproduce this at first because the category field wouldn't accept typing space. But if I copy and paste some text with a space in it then I can paste it in and reproduce the bug
Comment 2 Commit Notification 2014-06-16 16:00:18 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=46650cb7c3ed3d48d8fe7b6c6dd6d7357b698afb

Related: fdo#47427 disallow pasting spaces into category box



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.