Related: fdo#47427 disallow pasting spaces into category box

Change-Id: I4caf4b2ac028629c6ecbd42084346623192df09e